--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,8 @@ set(CMAKE_C_STANDARD 99)
 add_executable(connect4 main.c
         game.c
         game.h
+        gamehelper.c
+        gamehelper.h
+        windetection.h
+        windetection.c
 )
